Renaming some files.

--- a/ReedSolomon.vcxproj
+++ b/ReedSolomon.vcxproj
@@ -147,9 +147,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="GaloisField16.h" />
+    <ClInclude Include="Polynomial.h" />
+    <ClInclude Include="RS16Parity.h" />
+    <ClInclude Include="RS16Repair.h" />
+    <ClInclude Include="RS16Syndrome.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GaloisField16.cpp" />
+    <ClCompile Include="Polynomial.cpp" />
+    <ClCompile Include="RS16Parity.cpp" />
+    <ClCompile Include="RS16SyndromeCalculator.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
