--- a/ReedSolomon.vcxproj.filters
+++ b/ReedSolomon.vcxproj.filters
@@ -18,9 +18,30 @@
     <ClInclude Include="GaloisField16.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Polynomial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RS16Repair.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RS16Parity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RS16Syndrome.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GaloisField16.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Polynomial.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RS16SyndromeCalculator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RS16Parity.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
