--- a/ReedSolomon.vcxproj.filters
+++ b/ReedSolomon.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="RS16Syndrome.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Vector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GaloisField16.cpp">
@@ -38,10 +41,13 @@
     <ClCompile Include="Polynomial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="RS16SyndromeCalculator.cpp">
+    <ClCompile Include="RS16Parity.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="RS16Parity.cpp">
+    <ClCompile Include="RS16Syndrome.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Vector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
