Added SquareMatrix class

--- a/ReedSolomon.vcxproj
+++ b/ReedSolomon.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="RS16Parity.h" />
     <ClInclude Include="RS16Repair.h" />
     <ClInclude Include="RS16Syndrome.h" />
+    <ClInclude Include="SquareMatrix.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
   <ItemGroup>
@@ -160,6 +161,7 @@
     <ClCompile Include="Polynomial.cpp" />
     <ClCompile Include="RS16Parity.cpp" />
     <ClCompile Include="RS16Syndrome.cpp" />
+    <ClCompile Include="SquareMatrix.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
