--- a/ReedSolomon.vcxproj.filters
+++ b/ReedSolomon.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClCompile Include="SquareMatrix.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RS16Repair.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
